fix(CORESERV-5760): add overflow anywhere to InfoRow component

--- a/packages/info-row/src/components/InfoRow/styles.module.scss
+++ b/packages/info-row/src/components/InfoRow/styles.module.scss
@@ -48,6 +48,7 @@ $gap: styles-theme-variables.$dimension-3m;
   flex: 1;
   justify-content: flex-start;
   align-items: flex-start;
+  overflow-wrap: anywhere;
 }
 
 .rowActions {
